[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UserInterfaces/Label.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterfaces/btn_Quit.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterfaces/btn_Play.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/themes/theme6.tres" type="Theme" id=4]
[ext_resource path="res://src/themes/theme25.tres" type="Theme" id=5]
[ext_resource path="res://src/UserInterfaces/btn_Retry.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Screens/PauseScreen.gd" type="Script" id=7]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -48.0
margin_bottom = 24.0
text = "Score: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTime" type="Label" parent="."]
margin_right = 48.0
margin_bottom = 24.0
text = "Score: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="PauseOverlay" instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -42.0
margin_right = 76.0
margin_bottom = -16.0
theme = ExtResource( 5 )
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -20.0
margin_right = 22.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Retry" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 44.0
margin_bottom = 13.0

[node name="btn_Play2" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 17.0
margin_right = 44.0
margin_bottom = 30.0
text = "Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="btn_Quit" parent="PauseOverlay/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 44.0
margin_bottom = 47.0

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
